--- a/index.html
+++ b/index.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-            crossorigin="anonymous"
-        />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
 
-        <link rel="stylesheet" href="styles/css/style.css" />
-        <title>BloodBank Management System</title>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-            <a class="navbar-brand" href="#"
-                ><img src="images/blood-bank-logo.jpg" height="50px" width="50px"
-            /></a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <link rel="stylesheet" href="styles/css/style.css" />
+    <title>BloodBank Management System</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+      <a class="navbar-brand" href="#"
+        ><img src="images/blood-bank-logo.jpg" height="40px" width="50px"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li><a class="nav-link" href="#" style="color: white;">Blood Bank</a></li>
-                    <li><a class="nav-link" href="#" style="color: white;">About Us</a></li>
-                    <li><a class="nav-link" href="#" style="color: white;">Contact Us</a></li>
-                </ul>
-                <ul class="navbar-nav mr-right">
-                    <li>
-                        <a class="nav-link" href="#" style="color: white;">Admin Login</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </body>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li>
+            <a class="nav-link" href="#" style="color: white;">Blood Bank</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#" style="color: white;">About Us</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#" style="color: white;">Contact Us</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav mr-right">
+          <li>
+            <a class="nav-link" href="#" style="color: white;">Admin Login</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="footer bg-danger">
+      <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
+    </div>
+  </body>
 </html>
