Landing Page and About Us

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#" style="color: white;">Blood Bank</a>
           </li>
           <li>
-            <a class="nav-link" href="#" style="color: white;">About Us</a>
+            <a class="nav-link" href="aboutus.html" style="color: white;">About Us</a>
           </li>
           <li>
             <a class="nav-link" href="#" style="color: white;">Contact Us</a>
@@ -51,6 +51,179 @@
       </div>
     </nav>
 
+
+    <div class="container-fluid container-main">
+      <div class="row">
+        <div
+          class="main-functions col col-xl-3 col-lg-3 col-md-3 col-sm-12"
+          style="border: 1px solid black;"
+        >
+          <img
+            class="request-img"
+            src="images/request.png"
+            height="55%"
+            width="65%"
+          />
+          <h5 align="center">Request Now</h5>
+          <p>
+            Need of blood urgently? Request now and have blood ready in no time!
+          </p>
+        </div>
+
+        <div
+          class="main-functions col col-xl-3 col-lg-3 col-md-3 col-sm-12"
+          style="border: 1px solid black;"
+        >
+          <img
+            class="enquire-img"
+            src="images/enquire.jpg"
+            height="57%"
+            width="65%"
+          />
+          <h5 align="center">Enquire Now</h5>
+          <p>
+            Wanna know if a particular blood type is available with us? Ping us
+            and we'll let you know.
+          </p>
+        </div>
+
+        <div
+          class="main-functions col col-xl-3 col-lg-3 col-md-3 col-sm-12"
+          style="border: 1px solid black;"
+        >
+          <img
+            class="donate-img"
+            src="images/donate.png"
+            height="57%"
+            width="65%"
+          />
+          <h5 align="center">Donate Blood Now!</h5>
+          <p>
+            Feeling like doing something good? Donate blood and save lives!
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <br />
+        <br />
+      </div>
+    </div>
+    <hr>
+
+    <div class="container container-secondary">
+        <div class="row">
+          <div class="col">
+              <h4 align="center">
+                Donating blood is a vital way to help save lives. Along with helping save lives, there are a number of reasons why donating blood is important. A single donation can save three lives. One blood donation provides different blood components that can help up to three different people.
+              </h4>
+          </div>
+      </div>
+      <br>
+      <br>
+    <hr>
+    
+    <div class="container container-compatible">
+        <h4 align="center">Blood Compatibility Chart</h4>
+        <div class="row">            
+            <div class="col comp-chart">
+                <b>Blood Type</b>
+            </div>
+            <div class="col comp-chart">
+            <b>Donate Blood To</b>
+            </div>
+            <div class="col comp-chart">
+            <b>Receive Blood From</b>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>A+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>A+,AB+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>A+,A-,O+,O-</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>O+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>O+,A+,B+,AB+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>O+,O-</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>B+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>B+,AB+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>B+,B-,O+,O-</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>AB+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>AB+</p>
+            </div>
+            <div class="col comp-chart">
+                <p>Everyone!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>A-</p>
+            </div>
+            <div class="col comp-chart">
+                <p>A+,A-,AB+,AB-</p>
+            </div>
+            <div class="col comp-chart">
+                <p>A-,O-</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>O-</p>
+            </div>
+            <div class="col comp-chart">
+                <p>Everyone!</p>
+            </div>
+            <div class="col comp-chart">
+                <p>O-</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>B-</p>
+            </div>
+            <div class="col comp-chart">
+                <p>B+,B-,AB+,AB-</p>
+            </div>
+            <div class="col comp-chart">
+                <p>A-,O-</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col comp-chart">
+                <p>AB-</p>
+            </div>
+            <div class="col comp-chart">
+                <p>AB+,AB-</p>
+            </div>
+            <div class="col comp-chart">
+                <p>AB-,A-,B-,O+,O-</p>
+            </div>
+        </div>
+    </div>
     <div class="footer bg-danger">
       <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
     </div>
