--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-      <a class="navbar-brand" href="#"
+      <a class="navbar-brand" href="index.html"
         ><img src="images/blood-bank-logo.jpg" height="40px" width="50px"
       /></a>
       <button
@@ -34,13 +34,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li>
-            <a class="nav-link" href="#" style="color: white;">Blood Bank</a>
+            <a class="nav-link" href="index.html" style="color: white;">Blood Bank</a>
           </li>
           <li>
             <a class="nav-link" href="aboutus.html" style="color: white;">About Us</a>
           </li>
           <li>
-            <a class="nav-link" href="#" style="color: white;">Contact Us</a>
+            <a class="nav-link" href="contactUs.html" style="color: white;">Contact Us</a>
           </li>
         </ul>
         <ul class="navbar-nav mr-right">
@@ -52,26 +52,26 @@
     </nav>
 
 
-    <div class="container-fluid container-main">
+    <div class="container container-main">
       <div class="row">
-        <div
-          class="main-functions col col-xl-3 col-lg-3 col-md-3 col-sm-12"
+          <div
+          class="main-functions col col-lg-4 col-md-4 col-sm-3 col-6"
           style="border: 1px solid black;"
-        >
+          >
           <img
             class="request-img"
             src="images/request.png"
             height="55%"
             width="65%"
           />
-          <h5 align="center">Request Now</h5>
-          <p>
+          <h5 class="tiles-label" align="center">Request Now</h5>
+          <p align="center">
             Need of blood urgently? Request now and have blood ready in no time!
           </p>
         </div>
-
+      
         <div
-          class="main-functions col col-xl-3 col-lg-3 col-md-3 col-sm-12"
+          class="main-functions col col-lg-3 col-md-4 col-sm-3 col-6"
           style="border: 1px solid black;"
         >
           <img
@@ -80,15 +80,15 @@
             height="57%"
             width="65%"
           />
-          <h5 align="center">Enquire Now</h5>
-          <p>
+          <h5 class="tiles-label" align="center">Enquire Now</h5>
+          <p align="center">
             Wanna know if a particular blood type is available with us? Ping us
             and we'll let you know.
           </p>
         </div>
 
         <div
-          class="main-functions col col-xl-3 col-lg-3 col-md-3 col-sm-12"
+          class="main-functions col col-lg-4 col-md-4 col-sm-3 col-6" 
           style="border: 1px solid black;"
         >
           <img
@@ -97,8 +97,8 @@
             height="57%"
             width="65%"
           />
-          <h5 align="center">Donate Blood Now!</h5>
-          <p>
+          <h5 class="tiles-label" align="center">Donate Blood Now!</h5>
+          <p align="center">
             Feeling like doing something good? Donate blood and save lives!
           </p>
         </div>
@@ -113,7 +113,7 @@
     <div class="container container-secondary">
         <div class="row">
           <div class="col">
-              <h4 align="center">
+              <h4 class="index-heading">
                 Donating blood is a vital way to help save lives. Along with helping save lives, there are a number of reasons why donating blood is important. A single donation can save three lives. One blood donation provides different blood components that can help up to three different people.
               </h4>
           </div>
@@ -123,7 +123,7 @@
     <hr>
     
     <div class="container container-compatible">
-        <h4 align="center">Blood Compatibility Chart</h4>
+        <h4 class="index-heading" align="center">Blood Compatibility Chart</h4>
         <div class="row">            
             <div class="col comp-chart">
                 <b>Blood Type</b>
@@ -223,7 +223,18 @@
                 <p>AB-,A-,B-,O+,O-</p>
             </div>
         </div>
+        <br>
+        <br>
     </div>
+    <hr>
+    <div class="youtube-video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-Cwiu9Hi0vo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <br>
+      <br>
+    </div>
+    <hr>
+    <h4 align="center">****</h4>
+
     <div class="footer bg-danger">
       <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
     </div>
