--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             crossorigin="anonymous"
         />
-
+        <link rel="icon" href="images/blood-bank-logo.jpg" />
         <link rel="stylesheet" href="styles/css/style.css" />
         <title>About Us</title>
     </head>
