--- a/adminLogin.html
+++ b/adminLogin.html
@@ -10,10 +10,10 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             crossorigin="anonymous"
         />
-        <link rel="icon" href="images/blood-bank-logo.jpg">
+        <link rel="icon" href="images/blood-bank-logo.jpg" />
 
         <link rel="stylesheet" href="styles/css/style.css" />
-        <title>Contact Us</title>
+        <title>Admin Login</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-danger">
@@ -48,21 +48,38 @@
                 </ul>
                 <ul class="navbar-nav mr-right">
                     <li>
-                        <a class="nav-link" href="adminLogin.html" style="color: white;">Admin Login</a>
+                        <a class="nav-link" href="adminLogin.html" style="color: white;"
+                            >Admin Login</a
+                        >
                     </li>
                 </ul>
             </div>
         </nav>
 
-        <div class="contact-info">
-            <h4><u>Contact Us:</h4></u>
-            <h5>Valachil, Mangalore, Karnataka 574143</h5>
+        <div class="container-admin-login">
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input
+                        type="email"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="emailHelp"
+                    />
+                    <small id="emailHelp" class="form-text text-muted"
+                        >We'll never share your email with anyone else.</small
+                    >
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" />
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
-        <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5227798807255!2d74.93731361526939!3d12.874070220493058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba3585ea5927d6f%3A0xc65abe4f89ccf8ab!2sSrinivas%20Institute%20Of%20Technology(S.I.T.)!5e0!3m2!1sen!2sin!4v1594319744352!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </div>
+
         <div class="footer bg-danger">
             <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
-        </iframe>
+        </div>
     </body>
 </html>
