--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
-    />
+    />  
+    <link rel="icon" href="images/blood-bank-logo.jpg">
 
     <link rel="stylesheet" href="styles/css/style.css" />
     <title>BloodBank Management System</title>
@@ -45,7 +46,7 @@
         </ul>
         <ul class="navbar-nav mr-right">
           <li>
-            <a class="nav-link" href="#" style="color: white;">Admin Login</a>
+            <a class="nav-link" href="adminLogin.html" style="color: white;">Admin Login</a>
           </li>
         </ul>
       </div>
