Added buttons for 3 funtions

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           <p align="center">
             Need of blood urgently? Request now and have blood ready in no time!
           </p>
+          <a href="#" ><button type="button" class="btn btn-danger req-button" style="margin-top: 33px;">Request!</button></a>
         </div>
       
         <div
@@ -86,6 +87,7 @@
             Wanna know if a particular blood type is available with us? Ping us
             and we'll let you know.
           </p>
+          <a href="#" ><button type="button" class="btn btn-danger req-button">Enquire!</button></a>
         </div>
 
         <div
@@ -102,6 +104,7 @@
           <p align="center">
             Feeling like doing something good? Donate blood and save lives!
           </p>
+          <a href="#" ><button type="button" class="btn btn-danger req-button" style="margin-top: 25px;">Donate!</button></a>
         </div>
       </div>
       <div class="row">
@@ -124,7 +127,7 @@
     <hr>
     
     <div class="container container-compatible">
-        <h4 class="index-heading" align="center">Blood Compatibility Chart</h4>
+        <h4 class="index-heading" align="center" style="text-decoration: underline;">Blood Compatibility Chart</h4>
         <div class="row">            
             <div class="col comp-chart">
                 <b>Blood Type</b>
@@ -234,7 +237,7 @@
       <br>
     </div>
     <hr>
-    <h4 align="center">****</h4>
+    <h4 align="center" style="content: none;">****</h4>
 
     <div class="footer bg-danger">
       <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
