--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-danger">
             <a class="navbar-brand" href="index.html"
-                ><img src="images/blood-bank-logo.jpg" height="40px" width="50px"
+                ><img src="images/blood-bank-logo.jpg" height="40px" width="50px" class="logo"
             /></a>
             <button
                 class="navbar-toggler"
