--- a/contactUs.html
+++ b/contactUs.html
@@ -18,7 +18,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-danger">
             <a class="navbar-brand" href="index.html"
-                ><img src="images/blood-bank-logo.jpg" height="40px" width="50px"
+                ><img src="images/blood-bank-logo.jpg" height="40px" width="50px" class="logo"
             /></a>
             <button
                 class="navbar-toggler"
@@ -54,13 +54,18 @@
             </div>
         </nav>
 
-        <div class="contact-info">
-            <h4><u>Contact Us:</h4></u>
-            <h5>Valachil, Mangalore, Karnataka 574143</h5>
+        <div class="container">
+            <div class="row">
+                <div class="col col col-lg-4 col-md-6 col-sm-3 contact-info">
+                    <h4><u>Contact Us:</h4></u>
+                    <h5>Valachil, Mangalore, Karnataka 574143</h5>
+                </div>
+                <div class="col col-lg-4 col-md-6 col-sm-3 map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5227798807255!2d74.93731361526939!3d12.874070220493058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba3585ea5927d6f%3A0xc65abe4f89ccf8ab!2sSrinivas%20Institute%20Of%20Technology(S.I.T.)!5e0!3m2!1sen!2sin!4v1594319744352!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+            </div>
         </div>
-        <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5227798807255!2d74.93731361526939!3d12.874070220493058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba3585ea5927d6f%3A0xc65abe4f89ccf8ab!2sSrinivas%20Institute%20Of%20Technology(S.I.T.)!5e0!3m2!1sen!2sin!4v1594319744352!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </div>
+        
         <div class="footer bg-danger">
             <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
         </iframe>
