--- a/enquiry.html
+++ b/enquiry.html
@@ -13,7 +13,7 @@
         <link rel="icon" href="images/blood-bank-logo.jpg" />
 
         <link rel="stylesheet" href="styles/css/style.css" />
-        <title>Admin Login</title>
+        <title>Enquiry</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-danger">
@@ -56,28 +56,6 @@
             </div>
         </nav>
 
-        <div class="container-admin-login">
-            <form>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input
-                        type="email"
-                        class="form-control"
-                        id="exampleInputEmail1"
-                        aria-describedby="emailHelp"
-                    />
-                    <small id="emailHelp" class="form-text text-muted"
-                        >We'll never share your email with anyone else.</small
-                    >
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" />
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-        <a href="adminHome.html"><button type="submit" class="btn btn-primary">Submit</button></a>
         <div class="footer bg-danger">
             <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
         </div>
