--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
       <a class="navbar-brand" href="index.html"
-        ><img src="images/blood-bank-logo.jpg" height="40px" width="50px"
+        ><img src="images/blood-bank-logo.jpg" height="40px" width="50px" class="logo"
       /></a>
       <button
         class="navbar-toggler"
@@ -87,7 +87,7 @@
             Wanna know if a particular blood type is available with us? Ping us
             and we'll let you know.
           </p>
-          <a href="#" ><button type="button" class="btn btn-danger req-button">Enquire!</button></a>
+          <a href="enquiry.html" ><button type="button" class="btn btn-danger req-button">Enquire!</button></a>
         </div>
 
         <div
