--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p align="center">
             Need of blood urgently? Request now and have blood ready in no time!
           </p>
-          <a href="#" ><button type="button" class="btn btn-danger req-button" style="margin-top: 33px;">Request!</button></a>
+          <a href="request.html" class="btn btn-danger stretched-link req-button" style="margin-top: 35px">Request!</button></a>
         </div>
       
         <div
@@ -87,7 +87,7 @@
             Wanna know if a particular blood type is available with us? Ping us
             and we'll let you know.
           </p>
-          <a href="enquiry.html" ><button type="button" class="btn btn-danger req-button">Enquire!</button></a>
+          <a href="enquiry.html" class="btn btn-danger stretched-link req-button" >Enquire</a>
         </div>
 
         <div
@@ -104,7 +104,7 @@
           <p align="center">
             Feeling like doing something good? Donate blood and save lives!
           </p>
-          <a href="#" ><button type="button" class="btn btn-danger req-button" style="margin-top: 25px;">Donate!</button></a>
+          <a href="donate.html" class="btn btn-danger stretched-link req-button" style="margin-top: 25px;">Donate!</button></a>
         </div>
       </div>
       <div class="row">
