--- a/donate.html
+++ b/donate.html
@@ -56,7 +56,7 @@
             </div>
         </nav>
         <form>
-            <div class="container container-main">
+            <div class="container container-main container-donate">
                 <div class="form-row">
                     <div class="form-group col-lg-4">
                         <label class="font-weight-bold" style="color: #d9534f;">FIRST NAME:</label>
@@ -127,7 +127,7 @@
                         <input type="date" name="date" required="" style="margin-left: 30px; margin-top: 25px;"/>
                     </div>
                 </div>
-                <div class="form-row">
+                <div class="form-row" style="margin-bottom: 75px;">
                     <div class="col-4">
                         <button class="btn btn-danger form-buttons">SUBMIT</button>
                     </div>
@@ -146,4 +146,7 @@
             <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
         </iframe>
     </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </html>
