--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li>
+          <li class="nav-item active">
             <a class="nav-link" href="index.html" style="color: white;">Blood Bank</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a class="nav-link" href="aboutus.html" style="color: white;">About Us</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a class="nav-link" href="contactUs.html" style="color: white;">Contact Us</a>
           </li>
         </ul>
         <ul class="navbar-nav mr-right">
-          <li>
+          <li class="nav-item active">
             <a class="nav-link" href="adminLogin.html" style="color: white;">Admin Login</a>
           </li>
         </ul>
@@ -243,4 +243,7 @@
       <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </html>
