Fixed some alignment issues

--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container-aboutus" style="margin-left: 15%;">
+    <div class="container-fluid container-aboutus" style="margin-left: 15%;">
       <section class="names">
         <h5 class="tiles-label">Chaitanya Thekkunja</h5>
         <p>
