--- a/adminLogin.html
+++ b/adminLogin.html
@@ -64,19 +64,16 @@
       </div>
     </nav>
 
-    <div class="container-admin-login">
+    <div class="container container-admin-login">
       <form>
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
+          <label for="exampleInputEmail1">Username</label>
           <input
             type="email"
             class="form-control"
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
           />
-          <small id="emailHelp" class="form-text text-muted"
-            >We'll never share your email with anyone else.</small
-          >
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
@@ -86,12 +83,16 @@
             id="exampleInputPassword1"
           />
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button
+          type="submit"
+          class="btn btn-danger"
+          style="margin: 20px 110px 0px 110px;"
+        >
+          Submit
+        </button>
       </form>
     </div>
-    <a href="adminHome.html"
-      ><button type="submit" class="btn btn-primary">Submit</button></a
-    >
+
     <div class="footer bg-danger">
       <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
     </div>
