--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container container-main">
       <div class="row">
           <div
-          class="main-functions col col-lg-4 col-md-4 col-sm-3 col-6"
+          class="main-functions col col-lg-4"
           style="border: 1px solid black;"
           >
           <img
@@ -73,7 +73,7 @@
         </div>
       
         <div
-          class="main-functions col col-lg-3 col-md-4 col-sm-3 col-6"
+          class="main-functions col col-lg-3"
           style="border: 1px solid black;"
         >
           <img
@@ -91,7 +91,7 @@
         </div>
 
         <div
-          class="main-functions col col-lg-4 col-md-4 col-sm-3 col-6" 
+          class="main-functions col col-lg-4" 
           style="border: 1px solid black;"
         >
           <img
@@ -116,7 +116,7 @@
 
     <div class="container container-secondary">
         <div class="row">
-          <div class="col">
+          <div class="col col-lg-12">
               <h4 class="index-heading">
                 Donating blood is a vital way to help save lives. Along with helping save lives, there are a number of reasons why donating blood is important. A single donation can save three lives. One blood donation provides different blood components that can help up to three different people.
               </h4>
@@ -232,7 +232,7 @@
     </div>
     <hr>
     <div class="youtube-video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/-Cwiu9Hi0vo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-Cwiu9Hi0vo" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 10px;"></iframe>
       <br>
       <br>
     </div>
