--- a/contactUs.html
+++ b/contactUs.html
@@ -14,6 +14,11 @@
 
         <link rel="stylesheet" href="styles/css/style.css" />
         <title>Contact Us</title>
+        <style>
+            iframe{
+                box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+            }
+        </style>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-danger">
@@ -56,12 +61,12 @@
 
         <div class="container">
             <div class="row">
-                <div class="col col col-lg-4 col-md-6 col-sm-3 contact-info">
+                <div class="col col-lg-4 contact-info" style="margin-top: 250px">
                     <h4><u>Contact Us:</h4></u>
                     <h5>Valachil, Mangalore, Karnataka 574143</h5>
                 </div>
-                <div class="col col-lg-4 col-md-6 col-sm-3 map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5227798807255!2d74.93731361526939!3d12.874070220493058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba3585ea5927d6f%3A0xc65abe4f89ccf8ab!2sSrinivas%20Institute%20Of%20Technology(S.I.T.)!5e0!3m2!1sen!2sin!4v1594319744352!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="col col-lg-4 map" style="margin-bottom: 70px;margin-top: 75px;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5227798807255!2d74.93731361526939!3d12.874070220493058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba3585ea5927d6f%3A0xc65abe4f89ccf8ab!2sSrinivas%20Institute%20Of%20Technology(S.I.T.)!5e0!3m2!1sen!2sin!4v1594319744352!5m2!1sen!2sin" width="600" height="450" frameborder="1" style="border:1px solid black; padding: 2px;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
