Added heading to landing page

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
       </div>
     </nav>
 
-
-    <div class="container container-main">
+    <div class="heading" style="margin-top: 100px;">
+      <h1 align="center" class="heading">DrizzleWebs BloodBank</h1>
+    </div>
+    <div class="container container-main landing-page">
       <div class="row">
           <div
           class="main-functions col col-lg-4"
