Added FAQ and newsletter section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <hr>
     
     <div class="container container-compatible">
-        <h4 class="index-heading" align="center" style="text-decoration: underline;">Blood Compatibility Chart</h4>
+        <h4 class="index-heading" align="center" style="text-decoration: underline; padding-bottom: 20px;">Blood Compatibility Chart</h4>
         <div class="row">            
             <div class="col comp-chart">
                 <b>Blood Type</b>
@@ -237,6 +237,118 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/-Cwiu9Hi0vo" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 10px;"></iframe>
       <br>
       <br>
+    </div>
+    <hr>
+
+    <h2 style="color: #d9534f; padding-bottom: 20px;">FAQs</h2>
+    <div class="accordion" id="accordionExample">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0 faq-button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button class="btn faq-button" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Will I get juice after donating blood?
+            </button>
+          </h2>
+        </div>    
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div class="card-body faq-answer" align="justify">
+            Yes you will be given juice to keep your blood sugar in check.
+          </div>
+        </div>
+      </div>
+
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0 faq-button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+            <button class="btn collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              How long will the donation process take?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+          <div class="card-body faq-answer" align="justify">
+            It usually takes about 15 minutes. It changes from person to person.
+          </div>
+        </div>
+      </div>
+
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h2 class="mb-0 faq-button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+            <button class="btn collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              How often can I dontate blood?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+          <div class="card-body faq-answer" align="justify">
+            You must have a gap of at least 12 weeks between donations.
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingFour">
+          <h2 class="mb-0 faq-button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+            <button class="btn collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              Who can donate blood?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+          <div class="card-body faq-answer" align="justify">
+            If you are between 18–65 years old and weigh a minimum of 50  kg, you can potentially save a life.
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingFive">
+          <h2 class="mb-0 faq-button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+            <button class="btn collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+              Does donating blood make me weak?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+          <div class="card-body faq-answer" align="justify">
+            Yes and no, you may feel weak for a few hours but you will be back to normal within no time.
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingSix">
+          <h2 class="mb-0 faq-button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+            <button class="btn collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+              How long will my blood stored for?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+          <div class="card-body faq-answer" align="justify">
+            Blood will be stored for at most for 42 days, if no receiver is found.
+          </div>
+        </div>
+      </div>
+      <br>
+    </div>
+    <hr>
+
+    <div class="container">
+      <form>
+        <div class="form-row">
+          <div class="form-group col col-lg-4 newsletter-label"><h4>Sign Up for our newsletter!</h4></div>
+          <div class="form-group col col-lg-4 newsletter-label">
+            <input type="email" name="newsletter-email" class="form-control" placeholder="Your email ID" size="50%">
+          </div>
+          <div class="form-group col col-lg-2 newsletter-label">
+            <button class="btn btn-danger form-buttons" style="margin-top: 0;">Submit</button>
+          </div>
+        </div>
+      </form>      
     </div>
     <hr>
     <h4 align="center" style="content: none;">****</h4>
