--- a/enquire.html
+++ b/enquire.html
@@ -55,9 +55,9 @@
                 </ul>
             </div>
         </nav>
-
-        <div class="container container-main">
-            <h4 align="center">ENQUIRY FORM</h4>
+        <h4 align="center" style="margin-top: 100px;">ENQUIRY FORM</h4>
+        <div class="container container-main" style="margin-left: 30%;">
+            
             <div class="form-row">
                 <div class="form-group col-lg-4">
                     <label class="font-weight-bold" style="color: #d9534f;">BLOOD TYPE:</label>
@@ -81,14 +81,11 @@
             </div>
 
             <div class="form-row">
-                <div class="col-4">
-                    <button class="btn btn-primary">SUBMIT</button>
+                <div class="col-6">
+                    <button class="btn btn-danger form-buttons">SUBMIT</button>
                 </div>
-                <div class="col-4">
-                    <button class="btn btn-primary">CLEAR</button>
-                </div>
-                <div class="col-4">
-                    <button class="btn btn-primary">CLOSE</button>
+                <div class="col-6">
+                    <button class="btn btn-danger form-buttons">CLEAR</button>
                 </div>
             </div>
         </div>
