Changed the form layouts

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             Wanna know if a particular blood type is available with us? Ping us
             and we'll let you know.
           </p>
-          <a href="enquiry.html" class="btn btn-danger stretched-link req-button" >Enquire</a>
+          <a href="enquire.html" class="btn btn-danger stretched-link req-button" >Enquire</a>
         </div>
 
         <div
