--- a/confirmations/thankYou.html
+++ b/confirmations/thankYou.html
@@ -10,15 +10,15 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             crossorigin="anonymous"
         />
-        <link rel="icon" href="images/blood-bank-logo.jpg" />
+        <link rel="icon" href="../images/blood-bank-logo.jpg" />
 
-        <link rel="stylesheet" href="styles/css/style.css" />
+        <link rel="stylesheet" href="../styles/css/style.css" />
         <title>Thank you.</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-danger">
             <a class="navbar-brand" href="index.html"
-                ><img src="images/blood-bank-logo.jpg" height="40px" width="50px" class="logo"
+                ><img src="../images/blood-bank-logo.jpg" height="40px" width="50px" class="logo"
             /></a>
             <button
                 class="navbar-toggler"
@@ -35,20 +35,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li>
-                        <a class="nav-link" href="index.html" style="color: white;">Blood Bank</a>
+                        <a class="nav-link" href="../index.html" style="color: white;">Blood Bank</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="aboutus.html" style="color: white;">About Us</a>
+                        <a class="nav-link" href="../aboutus.html" style="color: white;">About Us</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="contactUs.html" style="color: white;"
+                        <a class="nav-link" href="../contactUs.html" style="color: white;"
                             >Contact Us</a
                         >
                     </li>
                 </ul>
                 <ul class="navbar-nav mr-right">
                     <li>
-                        <a class="nav-link" href="adminLogin.html" style="color: white;"
+                        <a class="nav-link" href="../adminLogin.html" style="color: white;"
                             >Admin Login</a
                         >
                     </li>
@@ -64,7 +64,7 @@
                         role="alert"
                         style="width: 50%; text-align: center;""
                     >
-                        Thank you for signing up for our newsletter.<a href="index.html#newsletter">Click here go back.</a>
+                        Thank you for signing up for our newsletter.<a href="../index.html#newsletter">Click here go back.</a>
                     </div>
                     
                 </div>
