--- a/donate.html
+++ b/donate.html
@@ -55,7 +55,7 @@
                 </ul>
             </div>
         </nav>
-        <form>
+        <form action="backend/donate.php" method="POST">
             <h4 align="center" style="text-decoration: underline; margin-top: 100px;" class="form-title">DONATE FORM</h4>
             <div class="container-fluid container-form">
                 <div class="form-row">
@@ -71,7 +71,7 @@
                 <div class="form-row">                    
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">E-MAIL:</label>
-                        <input type="email" name="e-mail" class="form-control" />
+                        <input type="email" name="email" class="form-control" />
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">PHONE:</label>
@@ -81,7 +81,7 @@
                 <div class="form-row">
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">BLOOD TYPE:</label>
-                        <select class="custom-select">
+                        <select class="custom-select" name="bloodgroup">
                             <option>O+</option>
                             <option>O-</option>
                             <option>A+</option>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">PIN:</label>
-                        <input type="text" name="pin" class="form-control" />
+                        <input type="text" name="pincode" class="form-control" />
                     </div>
                 </div>
                 <div class="form-row">
@@ -114,7 +114,7 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">GENDER:</label>
-                        <select class="custom-select">
+                        <select class="custom-select" name="gender">
                             <option>MALE</option>
                             <option>FEMALE</option>
                         </select>
@@ -126,7 +126,7 @@
                         <button class="btn btn-danger form-buttons" type="reset">CLEAR</button>
                     </div>
                     <div class="col-6" align="center">
-                        <button class="btn btn-danger form-buttons">SUBMIT</button>
+                        <button class="btn btn-danger form-buttons" name="submit-btn">SUBMIT</button>
                     </div>                    
                 </div>
             </div>
