--- a/request.html
+++ b/request.html
@@ -54,7 +54,7 @@
             </div>
         </nav>
         
-        <form>
+        <form action="backend/request.php" method="POST">
             <h4 align="center" style="text-decoration: underline; margin-top: 100px;" class="form-title">REQUEST FORM</h4>
             <div class="container-fluid container-form">
                 
@@ -71,7 +71,7 @@
                 <div class="form-row">
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">E-MAIL:</label>
-                        <input type="email" name="e-mail" class="form-control" />
+                        <input type="email" name="email" class="form-control" />
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">PHONE:</label>
@@ -82,7 +82,7 @@
                 <div class="form-row">
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">BLOOD TYPE:</label>
-                        <select class="custom-select">
+                        <select class="custom-select" name="bloodgroup">
                             <option>O+</option>
                             <option>O-</option>
                             <option>A+</option>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">PIN:</label>
-                        <input type="number" name="pin-code" class="form-control" />
+                        <input type="number" name="pincode" class="form-control" />
                     </div>
                 </div>
                 <div class="form-row">
@@ -123,10 +123,10 @@
                 </div>
                 <div class="form-row" style="margin-bottom: 75px;">                    
                     <div class="col-6" align="center">
-                        <button class="btn btn-danger form-buttons">CLEAR</button>
+                        <button type="reset" class="btn btn-danger form-buttons">CLEAR</button>
                     </div>
                     <div class="col-6" align="center">
-                        <button class="btn btn-danger form-buttons">SUBMIT</button>
+                        <button class="btn btn-danger form-buttons" name="submit-btn">SUBMIT</button>
                     </div>
                 </div>
             </div>
