Flex Wrap Removed from landing page

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <h1 align="center" class="heading">DrizzleWebs BloodBank</h1>
     </div>
     <div class="container container-main landing-page">
-      <div class="row">
+      <div class="row" style="flex-wrap: nowrap;">
           <div
-          class="main-functions col col-lg-4"
+          class="main-functions col col-xl-4 col-lg-4"
           style="border: 1px solid black;"
           >
           <img
@@ -75,7 +75,7 @@
         </div>
       
         <div
-          class="main-functions col col-lg-3"
+          class="main-functions col col-xl-4 col-lg-3"
           style="border: 1px solid black;"
         >
           <img
@@ -93,7 +93,7 @@
         </div>
 
         <div
-          class="main-functions col col-lg-4" 
+          class="main-functions col col-xl-4 col-lg-4" 
           style="border: 1px solid black;"
         >
           <img
