Admin Home Page :

--- a/aboutus.html
+++ b/aboutus.html
@@ -53,31 +53,29 @@
             </div>
         </nav>
         <div class="container container-aboutus">
-            <div class="row">
-                <div class="col-5 names">
+            <div class="row" style="flex-wrap: nowrap;">
+                <div class="col-3 names">
                     <h5 class="tiles-label">Chaitanya Thekkunja</h5>
                     <p>
                         USN:4SN17CS711<br />
                         Srinivas Institute of Technology
                     </p>
                 </div>
-                <div class="col-5 names">
+                <div class="col-3 names">
                     <h5 class="tiles-label" align="center">Yashaswi G P</h5>
                     <p>
                         USN:4SN17CS726<br />
                         Srinivas Institute of Technology
                     </p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-5 names">
+                <div class="col-3 names">
                     <h5 class="tiles-label" align="center">Prajna Shetty</h5>
                     <p>
                         USN:4SN17CS717<br />
                         Srinivas Institute of Technology
                     </p>
                 </div>
-                <div class="col-5 names">
+                <div class="col-3 names">
                     <h5 class="tiles-label" align="center">Ashwitha Maben</h5>
                     <p>
                         USN:4SN17CS705<br />
