--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>    
         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
           <div class="card-body faq-answer" align="justify">
-            Yes you will be given juice to keep your blood sugar in check.
+            Ans: Yes you will be given juice to keep your blood sugar in check.
           </div>
         </div>
       </div>
@@ -268,7 +268,7 @@
         </div>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
           <div class="card-body faq-answer" align="justify">
-            It usually takes about 15 minutes. It changes from person to person.
+            Ans: It usually takes about 15 minutes. It changes from person to person.
           </div>
         </div>
       </div>
@@ -284,7 +284,7 @@
         </div>
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
           <div class="card-body faq-answer" align="justify">
-            You must have a gap of at least 12 weeks between donations.
+            Ans: You must have a gap of at least 12 weeks between donations.
           </div>
         </div>
       </div>
@@ -299,7 +299,7 @@
         </div>
         <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
           <div class="card-body faq-answer" align="justify">
-            If you are between 18–65 years old and weigh a minimum of 50  kg, you can potentially save a life.
+            Ans: If you are between 18–65 years old and weigh a minimum of 50  kg, you can potentially save a life.
           </div>
         </div>
       </div>
@@ -314,7 +314,7 @@
         </div>
         <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
           <div class="card-body faq-answer" align="justify">
-            Yes and no, you may feel weak for a few hours but you will be back to normal within no time.
+            Ans: Yes and no, you may feel weak for a few hours but you will be back to normal within no time.
           </div>
         </div>
       </div>
@@ -329,7 +329,7 @@
         </div>
         <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
           <div class="card-body faq-answer" align="justify">
-            Blood will be stored for at most for 42 days, if no receiver is found.
+            Ans: Blood will be stored for at most for 42 days, if no receiver is found.
           </div>
         </div>
       </div>
