--- a/adminHome.html
+++ b/adminHome.html
@@ -64,9 +64,38 @@
       </div>
     </nav>
 
+    <form method="POST">
+      <div class="container" style="margin-top: 150px;">
+        <div class="row" style="flex-wrap: nowrap;" align="center">
+          <div class="col col-lg-6">                     
+            <button class="btn bg-danger" name="requests" type="submit" style="color: white;">Requests</button>
+          </div>          
+          <div class="col col-lg-6">            
+            <button class="btn bg-danger" name="donations" type="submit" style="color: white;">Donations</button>
+          </div>
+        </div>
+      </div>
+    </form>
+
+    <h2 align="center" style="color: #d9534f; margin-top: 50px; padding: 30px;">Blood Bank Status:</h2>
+    <div class="container">
+      <table class="table table-bordered table-hovarable table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>Branch</th>
+                <th>Type</th>
+                <th>Amount</th>
+            </tr>
+        </thead>
+        <tbody>
+          <!-- PHP Goes Here -->
+
+        </tbody>
+    </div>
+
     <div class="footer bg-danger">
       <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
-    </div>
+    </form>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
