--- a/contactUs.html
+++ b/contactUs.html
@@ -59,6 +59,28 @@
             </div>
         </nav>
 
+        <form>
+            <div class="container container-form" style="margin-top: 100px;">
+                <h4 align="center" style="text-decoration: underline; margin-top: 100px;" class="form-title">Write us here:</h4>
+                <div class="form-row">
+                    <div class="form-group col-lg-6">
+                        <label class="font-weight-bold" style="color: #d9534f;">Name:</label>
+                        <input type="text" name="fname" required="" class="form-control" />
+                    </div> 
+                    <div class="form-group col-lg-6">
+                        <label class="font-weight-bold" style="color: #d9534f;">E-Mail:</label>
+                        <input type="email" name="email" class="form-control" />
+                    </div>
+                <div class="form-row" style="flex-wrap: nowrap;">
+                    <div class="form-group col-lg-12">
+                        <label class="font-weight-bold" style="color: #d9534f;">Question:</label>
+                        <input type="text" name="question" class="form-control" ></input>
+                    </div>
+                </div>
+            </div>
+        </form>
+        
+        
         <div class="container">
             <div class="row">
                 <div class="col col-lg-4 contact-info" style="margin-top: 250px">
