Added tables to admin home page

--- a/donate.html
+++ b/donate.html
@@ -13,6 +13,11 @@
         <link rel="icon" href="images/blood-bank-logo.jpg" />
 
         <link rel="stylesheet" href="styles/css/style.css" />
+        <style>
+            body{
+              background-image: linear-gradient(180deg,#ffffff,#f5bac1);
+            }
+          </style>
         <title>Donate</title>
     </head>
     <body>
@@ -103,8 +108,8 @@
                         <input type="text" name="address" class="form-control" />
                     </div>
                     <div class="form-group col-lg-6">
-                        <label class="font-weight-bold" style="color: #d9534f;">PIN:</label>
-                        <input type="text" name="pincode" class="form-control" />
+                        <label class="font-weight-bold" style="color: #d9534f;">CITY:</label>
+                        <input type="text" name="city" class="form-control" />
                     </div>
                 </div>
                 <div class="form-row">
