--- a/adminHome.html
+++ b/adminHome.html
@@ -13,6 +13,11 @@
     <link rel="icon" href="images/blood-bank-logo.jpg" />
 
     <link rel="stylesheet" href="styles/css/style.css" />
+    <style>
+      body{
+        background-image: linear-gradient(180deg,#ffffff,#f5bac1);
+      }
+    </style>
     <title>Admin Home</title>
   </head>
   <body>
@@ -64,24 +69,28 @@
       </div>
     </nav>
 
+    <div class="heading" style="margin-top: 100px;">
+      <h1 align="center" class="heading">Admin Page</h1>
+    </div>
     <form method="POST">
-      <div class="container" style="margin-top: 150px;">
+      <div class="container" style="margin-top: 30px;">
         <div class="row" style="flex-wrap: nowrap;" align="center">
           <div class="col col-lg-6">                     
-            <button class="btn bg-danger" name="requests" type="submit" style="color: white;">Requests</button>
+            <a href="adminHome.html#req"><button class="btn bg-danger" name="requests" style="color: white;">Requests</button></a>
           </div>          
           <div class="col col-lg-6">            
-            <button class="btn bg-danger" name="donations" type="submit" style="color: white;">Donations</button>
+            <button class="btn bg-danger" name="donations" style="color: white;">Donations</button>
           </div>
         </div>
       </div>
     </form>
 
-    <h2 align="center" style="color: #d9534f; margin-top: 50px; padding: 30px;">Blood Bank Status:</h2>
+    <h2 align="center" style="color: #d9534f; margin-top: 30px; padding: 10px;" class="admin-page-heading">Blood Bank Status:</h2>
     <div class="container">
       <table class="table table-bordered table-hovarable table-hover">
         <thead class="thead-dark">
             <tr>
+                <th>ID</th>
                 <th>Branch</th>
                 <th>Type</th>
                 <th>Amount</th>
@@ -89,10 +98,58 @@
         </thead>
         <tbody>
           <!-- PHP Goes Here -->
-
+          <!-- <?php
+            echo '<td>1st</td>';
+            echo '<td>2nd</td>';
+            echo '<td>3rd</td>';
+          ?> -->
         </tbody>
+      </table>
     </div>
 
+    <h2 align="center" style="color: #d9534f; margin-top: 150px; padding: 10px;" class="admin-page-heading">Details of Requesters:</h2>
+    <div class="container" id="req" style="margin-bottom: 150px;">
+      <table class="table table-hovarable table-bordered table-hover">
+        <thead class="thead-dark">
+          <th>ID</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>E-mail</th>
+          <th>Phone</th>
+          <th>Blood Type</th>
+          <th>Amount</th>
+          <th>Address</th>
+          <th>City</th>
+          <th>Age</th>
+          <th>Gender</th>
+        </thead>
+        <tbody>
+          <!-- PHP Goes Here -->
+        </tbody>
+      </table>
+    </div>
+
+    <h2 align="center" style="color: #d9534f; margin-top: 150px; padding: 10px;" class="admin-page-heading">Details of Donors:</h2>
+    <div class="container" id="donor" style="margin-bottom: 150px;">
+      <table class="table table-hovarable table-bordered table-hover">
+        <thead class="thead-dark">
+          <th>ID</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>E-mail</th>
+          <th>Phone</th>
+          <th>Blood Type</th>
+          <th>Last Donated Date</th>
+          <th>Address</th>
+          <th>City</th>
+          <th>Age</th>
+          <th>Gender</th>
+        </thead>
+        <tbody>
+          <!-- PHP Goes Here -->
+        </tbody>
+      </table>
+    </div>
     <div class="footer bg-danger">
       <p style="padding: 5px 5px 1px 5px;">© 2020 DrizzleWebs</p>
     </form>
