--- a/enquire.html
+++ b/enquire.html
@@ -11,7 +11,6 @@
             crossorigin="anonymous"
         />
         <link rel="icon" href="images/blood-bank-logo.jpg" />
-
         <link rel="stylesheet" href="styles/css/style.css" />
         <title>Donate</title>
     </head>
@@ -60,7 +59,7 @@
             <div class="container-fluid container-form">
                 
                 <div class="form-row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         <label class="font-weight-bold" style="color: #d9534f;">BLOOD TYPE:</label>
                         <select class="custom-select" name="bloodtype">
                             <option>O+</option>
@@ -73,9 +72,13 @@
                             <option>AB-</option>
                         </select>
                     </div>
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         <label class="font-weight-bold" style="color: #d9534f;">AMOUNT:</label>
                         <input type="number" name="amount" class="form-control" />
+                    </div>
+                    <div class="form-group col-lg-4">
+                        <label class="font-weight-bold" style="color: #d9534f;">CITY:</label>
+                        <input type="number" name="city" class="form-control" />
                     </div>
                 </div>
                 <div class="form-row">
