--- a/request.html
+++ b/request.html
@@ -11,7 +11,11 @@
             crossorigin="anonymous"
         />
         <link rel="icon" href="images/blood-bank-logo.jpg">
-
+        <style>
+            body{
+              background-image: linear-gradient(180deg,#ffffff,#f5bac1);
+            }
+          </style>
         <link rel="stylesheet" href="styles/css/style.css" />
         <title>Reqeust</title>
     </head>
@@ -104,8 +108,8 @@
                         <input type="text" name="address" class="form-control" />
                     </div>
                     <div class="form-group col-lg-6">
-                        <label class="font-weight-bold" style="color: #d9534f;">PIN:</label>
-                        <input type="number" name="pincode" class="form-control" />
+                        <label class="font-weight-bold" style="color: #d9534f;">CITY:</label>
+                        <input type="number" name="city" class="form-control" />
                     </div>
                 </div>
                 <div class="form-row">
